--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script type="text/javascript" src="js/knockout-3.4.1.js"></script>
     <script type="text/javascript" src="dist/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/oauth-signature.min.js"></script> 
-   <!-- <script src="bower_components/oauth-signature/dist/oauth-signature.js"></script> --->
+   <!-- <script src="bower_components/oauth-signature/dist/oauth-signature.js"></script> -->
   
  </head>
  <body>
