--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@
   <meta http-equiv="Content-Type" content="text/html, charset=UTF-8" />
     <title>Neighborhood Map Application</title>
     
-    <link rel="stylesheet" href="dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="dist/css/map.css" >
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/map.css" >
     <script type="text/javascript" src="js/jquery-3.1.1.min.js"></script>
     <script type="text/javascript" src="js/knockout-3.4.1.js"></script>
-    <script type="text/javascript" src="dist/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/oauth-signature.min.js"></script> 
-   <!-- <script src="bower_components/oauth-signature/dist/oauth-signature.js"></script> -->
   
  </head>
  <body>
