--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@
           <p data-bind="text: title, click: function() { $parent.showInfo($data); $parent.yelpdata($data)}"></p>
         </div>
         <div class="panel-heading">More suggestions (from Yelp)</div>
-        <div class="panel-body" id="suggestions" data-bind="foreach: filterYelp">
-          <p><a target="_blank" data-bind="attr: { href: url }"><span data-bind="name"></span> </a></p>
+        <div class="panel-body" id="suggestions" data-bind="foreach: filterYelp()[0]">
+        
+          <p><a target="_blank" data-bind="attr: { href: url }"><span data-bind="text: name"></span> </a></p>
+          
         </div>
       </div>
 </div>
