--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
  <head>
   <meta http-equiv="Content-Type" content="text/html, charset=UTF-8" />
+
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Neighborhood Map Application</title>
     
     <link rel="stylesheet" href="css/bootstrap.min.css">
