--- a/index_responsive.html
+++ b/index_responsive.html
@@ -8,7 +8,7 @@
     <title>Neighborhood Map Application</title>
     
     <link rel="stylesheet" href="css/bootstrap.min.css">
-   <link rel="stylesheet" href="css/map_responsive.css" >
+   <link rel="stylesheet" href="css/map_responsive2.css" >
     <script type="text/javascript" src="js/jquery-3.1.1.min.js"></script>
     <script type="text/javascript" src="js/knockout-3.4.1.js"></script>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
@@ -26,7 +26,8 @@
    
 
             <div class="panel-body" data-bind="foreach: filteredItems">
-              <p data-bind="text: title, click: function() { $parent.showInfo($data); $parent.yelpdata($data)}"></p>
+              <!-- <p data-bind="text: title, click: function() { $parent.showInfo($data); $parent.yelpdata($data)}"></p> -->
+              <p data-bind="text: title, click: function(){$parent.showInfo($data); $parent.yelpdata($data)}"></p> 
             </div>
           <div class="panel-heading">More suggestions (from Yelp)</div>
             <div class="panel-body" id="suggestions" data-bind="foreach: filterYelp()[0]">
