--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html> -->
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html, charset=UTF-8" />
@@ -28,13 +28,16 @@
             <div class="panel-body" data-bind="foreach: filteredItems">
               <p data-bind="text: title, click: function(){$parent.showInfo($data); $parent.yelpdata($data)}"></p>
             </div>
-          <div class="panel-heading">More suggestions (from Yelp)</div>
-            <div class="panel-body" id="suggestions" data-bind="foreach: filterYelp()[0]">
+          <div class="panel-heading">More suggestions (from <a href="https://www.yelp.com/">Yelp</a>)
+          <p class="panel-body" data-bind="visible: showSuggestions">Try another place</p></div>
 
+
+            <div class="panel-body" id="suggestions" data-bind="foreach: filterYelp()[0]">
               <p><span class="glyphicon glyphicon-new-window" aria-hidden="true"></span><a target="_blank" data-bind="attr: { href: url }"><span data-bind="text: name"></span> </a><br />
               <button class="btn btn-default btn-sm" data-bind="click: $parent.showYelpMarker" >Show on the map</button><button class="btn btn-default btn-sm" data-bind="click: function() $parent.removeYelpMarker($data)">Remove</button></p>
-
             </div>
+
+
         </div>
       </div>
 
