--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="row">
       <div class="col-sm-4">
         <div class="panel panel-default">
-          <div class="panel-heading">
+          <div class="panel-heading navbar navbar-default">
           
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#searchItems" aria-expanded="false" aria-controls="navbar">
 <span class="glyphicon glyphicon-menu-hamburger"></span></button>
@@ -32,7 +32,7 @@
 
 
           
-<div id="searchItems" class="collapse navbar-collapse">
+<div id="searchItems" class="collapse">
               <input type="text" class="form-control input-sm"  data-bind="textInput: filter, event: {mouseover: hideListings, mouseout: showListings}"  placeholder="Search" />
 
 
