--- a/index.html
+++ b/index.html
@@ -7,21 +7,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Neighborhood Map Application</title>
 
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
    <link rel="stylesheet" href="css/map.css" >
 
   </head>
 <body>
   <div class="container">
-    <div class="row">
+    <main class="row">
       <div class="col-sm-4">
         <div class="panel panel-default">
-          <div class="panel-heading">
+          <nav class="panel-heading">
 
               <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#searchItems">
                 <span class="glyphicon glyphicon-menu-hamburger"></span></button>
               <h5>Where I like to eat in Bologna <small>by Claudio Tubertini</small></h5>
-          </div>
+          </nav>
 
 
           <div id="searchItems" class="collapse navbar-collapse">
@@ -38,7 +38,7 @@
 
 
               <div class="panel-body" id="suggestions" data-bind="visible: showSuggestions">
-                <p data-bind="visible: showSuggestions"><span class="glyphicon glyphicon-new-window" aria-hidden="true" data-bind="visible: showSuggestions"></span><a target="_blank" data-bind="attr: { href: url }"><span data-bind="text: name"></span> </a></p>
+                <p><span class="glyphicon glyphicon-new-window" aria-hidden="true" data-bind="if: showSuggestions"></span><a target="_blank" data-bind="attr: { href: url }"><span data-bind="text: name"></span> </a></p>
                 <p data-bind="text: reviews"></p>
               </div>
 
@@ -51,25 +51,26 @@
         </div>
       </div>
 
-      <div class="col-sm-8" id="map">
-      </div>
-    </div>
+      <map class="col-sm-8" id="map">
+      </map>
+    </main>
   </div>
 
    <!-- core javascript -->
    <!-- ======================================================= -->
-    <script type="text/javascript" src="js/jquery-3.1.1.min.js"></script>
-    <script type="text/javascript" src="js/knockout-3.4.1.js" ></script>
-    <script type="text/javascript" src="js/bootstrap.min.js" ></script>
+    <script type="text/javascript" src="http://code.jquery.com/jquery-3.1.1.min.js"></script>
+     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.1/knockout-min.js" ></script>
+      <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" ></script>
+
+
     <script type="text/javascript" src="js/oauth-signature.min.js" async></script>
-    
-<script type="text/javascript" src="js/neighborhood-map.js" async></script>
+
+<script type="text/javascript" src="js/neighborhood-map.js"></script>
  <script type="text/javascript" src="js/map.js" async></script>
-   <script src = "https://maps.googleapis.com/maps/api/js?libraries=geometry,drawing&key=AIzaSyBZR08CuagYkwAw6KeJBry2pZpiULeYuhM&v=3&callback=initMap" onerror="googleError()"
-   async defer>
+   <script async src="https://maps.googleapis.com/maps/api/js?libraries=geometry,drawing&key=AIzaSyBZR08CuagYkwAw6KeJBry2pZpiULeYuhM&v=3&callback=initMap" onerror="googleError()">
    </script>
-  
-   
+
+
  </body>
 </html>
 
