--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
      <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.1/knockout-min.js" ></script>
       <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" ></script>
 
-    <script type="text/javascript" src="js/oauth-signature.min.js" async></script>
+    <script type="text/javascript" src="js/oauth-signature.min.js"></script>
 
 <script type="text/javascript" src="js/neighborhood-map.js"></script>
- <script type="text/javascript" src="js/map.js" async></script>
+ <script type="text/javascript" src="js/map.js"></script>
    <script async src="https://maps.googleapis.com/maps/api/js?libraries=geometry,drawing&key=AIzaSyBZR08CuagYkwAw6KeJBry2pZpiULeYuhM&v=3&callback=initMap" onerror="googleError()">
    </script>
 
